# PyTasq

./: README.md  argparser.py  pyproject.toml  tasq.py  tasq_core.py  tasq_store.py
tests/: test_argparser.py  test_main.py
